--- a/Squirrel/Squirrel.Web/Views/Home/Index.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@using Squirrel.Domain.Enititis
+﻿@using System.Collections.Generic
+@using System.Linq
+@using Squirrel.Domain.Enititis
 @using Squirrel.Web.Models
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
