--- a/Squirrel/Squirrel.Web/Views/Shared/Sidebar/Sidebar-Home.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Shared/Sidebar/Sidebar-Home.cshtml
@@ -56,6 +56,12 @@
     </div>
 </div>
 
+<div class="divider-blank50"></div>
+
+<div class="flatbox-shadow">
+    @Html.Partial("~/Views/Shared/Sidebar/_Contact.cshtml")
+</div>
+
 <script type="text/javascript">
     $('#SidebarSearchText').on('keypress', function (e) {
         if (e.keyCode == 13) {
