--- a/Squirrel/Squirrel.Web/Views/Shared/Sidebar/Sidebar-Issue.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Shared/Sidebar/Sidebar-Issue.cshtml
@@ -58,6 +58,12 @@
 
 <div class="divider-blank50"></div>
 
+<div class="flatbox-shadow">
+    @Html.Partial("~/Views/Shared/Sidebar/_Contact.cshtml")
+</div>
+
+<div class="divider-blank50"></div>
+
 <script type="text/javascript">
     $('#SidebarSearchText').on('keypress', function (e) {
         if (e.keyCode == 13) {
