--- a/Squirrel/Squirrel.Web/Content/themes/vone/main.css
+++ b/Squirrel/Squirrel.Web/Content/themes/vone/main.css
@@ -252,16 +252,23 @@ html a:focus {
   border-radius: 2px;
   background-color: #538167;
   color: #f5f5f5;
-  -moz-transition: background-color, border-color linear, linear 0.2s;
-  -o-transition: background-color, border-color linear, linear 0.2s;
-  -webkit-transition: background-color, border-color linear, linear 0.2s;
-  transition: background-color, border-color linear, linear 0.2s;
+  -moz-transition: all linear 0.2s;
+  -o-transition: all linear 0.2s;
+  -webkit-transition: all linear 0.2s;
+  transition: all linear 0.2s;
 }
 .button .glyphbox,
 .button .siteglyphbox {
-  font-size: 24px;
+  font-size: 26px;
   line-height: 44px;
   vertical-align: middle;
+}
+.button .siteglyphbox {
+  font-size: 24px;
+}
+.button img {
+  vertical-align: middle;
+  max-height: 24px;
 }
 .button:hover {
   background-color: #37634a;
