--- a/Squirrel/Squirrel.Web/Views/Issue/Post_AddComment.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Issue/Post_AddComment.cshtml
@@ -1,11 +1,28 @@
-﻿@using System.Drawing
-@using BotDetect
+﻿@using BotDetect.Web
 @using BotDetect.Web.UI.Mvc
+@using Squirrel.Web.Models
 @model Squirrel.Domain.ViewModels.CommentAddPublicModel
 
-<link href="@BotDetect.Web.CaptchaUrls.Absolute.LayoutStyleSheetUrl" rel="stylesheet" type="text/css" />
+<link href="@CaptchaUrls.Absolute.LayoutStyleSheetUrl" rel="stylesheet" type="text/css" />
 
 <div class="topic">نظر بدهید.</div>
+
+<div id="add_comment_error" style="display: none;">
+    <div class="message-box error">
+        <span class="msg-close glyphbox" onclick="$('#add_comment_error').hide()">&#xe680</span>
+        <div class="msg-topic">خطا !</div>
+        <div class="msg-text"></div>
+    </div>
+    <div class="divider-blank30"></div>
+</div>
+
+<div id="add_comment_success" style="display: none;">
+    <div class="message-box success">
+        <span class="msg-close glyphbox" onclick="$('#add_comment_success').hide()">&#xe680</span>
+        <div class="msg-topic">نظر شما با موفقیت ثبت شد !</div>
+        <div class="msg-text">نظر شما بعد از تائید نویسنده مطلب نمایش داده خواهد شد.</div>
+    </div>
+</div>
 
 @using (Ajax.BeginForm("AddComment", "Issue", null,
         new AjaxOptions { OnBegin = "onAddCommentBegin", OnSuccess = "onAddCommentSuccess", OnFailure = "onAddCommentError" },
@@ -36,29 +53,25 @@
         </div>
     </div>
 
-    <div class="divider-blank30"></div>
+    var captcha = CaptchaHelper.GetCaptcha();
+    if (!captcha.IsSolved)
+    {
+        <div class="divider-blank30"></div>
 
-    <div>
-        <div class="materialtext hascaptcha">
-            <div class="title">عبارت امنیتی را وارد کنید.</div>
-            @Html.TextBoxFor(m => m.Captcha, new { @class = "textbox", @tabindex = "3", @id = "add_comment_field_captcha" })
-            <div class="captcha-con">
-                @{ var sampleCaptcha = new MvcCaptcha("SampleCaptcha")
-                   {
-                       ImageFormat = ImageFormat.Jpeg,
-                       ImageStyle = ImageStyle.SunAndWarmAir,
-                       CodeLength = 4,
-                       CaptchaImageTooltip = "عبارت امنیتی را به درستی وارد کنید.",
-                       CodeStyle = CodeStyle.Numeric,
-                       ImageSize = new Size(130, 47),
-                   }; }
-                @Html.Captcha(sampleCaptcha)
+        <div>
+            <div class="materialtext hascaptcha">
+                <div class="title">عبارت امنیتی را وارد کنید.</div>
+                @Html.TextBoxFor(m => m.CaptchaText, new { @class = "textbox", @tabindex = "3", @id = "add_comment_field_captcha" })
+                <div class="captcha-con">
+                    @Html.Captcha(captcha)
+                </div>
+            </div>
+            <div class="material-validation">
+                @Html.ValidationMessageFor(m => m.CaptchaText)
             </div>
         </div>
-        <div class="material-validation">
-            @Html.ValidationMessageFor(m => m.Captcha)
-        </div>
-    </div>
+    }
+
 
     <div class="divider-blank30"></div>
 
@@ -77,26 +90,8 @@
     <div class="add-comment-submit">
         <button class="button inline" type="submit" tabindex="5" style="width: 150px;">ثبت نظر</button>
         <button class="button line inline" type="button" onclick="clearAddCommentFrom()" style="width: 150px;">پاک کردن</button>
-        @Html.Partial("Loading", "addcomment_loading")
     </div>
 }
-
-<div id="add_comment_error" style="display: none;">
-    <div class="divider-blank50"></div>
-    <div class="message-box error">
-        <span class="msg-close glyphbox" onclick="$('#add_comment_error').hide()">&#xe680</span>
-        <div class="msg-topic">خطا !</div>
-        <div class="msg-text"></div>
-    </div>
-</div>
-
-<div id="add_comment_success" style="display: none;">
-    <div class="message-box success">
-        <span class="msg-close glyphbox" onclick="$('#add_comment_success').hide()">&#xe680</span>
-        <div class="msg-topic">نظر شما با موفقیت ثبت شد !</div>
-        <div class="msg-text">نظر شما بعد از تائید نویسنده مطلب نمایش داده خواهد شد.</div>
-    </div>
-</div>
 
 
 <script type="text/javascript">
@@ -107,45 +102,37 @@
         $('#add_comment_form .field-validation-error').text('');
     }
 
-    function loadMode() {
-        $('#addcomment_loading').show();
-        $('#addcomment_loading').prev('button').hide();
-        $('#addcomment_loading').prev('button').prev('button').hide();
-    }
-
-    function fillMode() {
-        $('#addcomment_loading').hide();
-        $('#addcomment_loading').prev('button').show();
-        $('#addcomment_loading').prev('button').prev('button').show();
-    }
-
     function onAddCommentBegin() {
-        loadMode();
+        $('.add-comment-submit').children('button[type="submit"]').loadMode('@Url.Content("~/Content/themes/vone/images/submit_loader.GIF")');
         $('#add_comment_error').hide();
     }
 
     function onAddCommentError() {
         setTimeout(function () {
-            fillMode();
+            $('.add-comment-submit').children('button[type="submit"]').loadMode();
             $('#add_comment_error .msg-text').text('هنگام ثبت نظر شما خطایی رخ داد. لطفا کمی دیرتر مجددا تلاش کنید.');
             $('#add_comment_error').show();
             // Reload Captcha
-            SampleCaptcha.ReloadImage();
+            CaptchaId.ReloadImage();
             $('#add_comment_field_captcha').val('');
         }, 200);
     }
 
     function onAddCommentSuccess(data) {
-        if (data.result == false) {
+        if (data.result === false) {
             setTimeout(function () {
-                fillMode();
                 $('#add_comment_error .msg-text').text(data.message);
                 $('#add_comment_error').show();
                 // Reload Captcha
-                SampleCaptcha.ReloadImage();
+                var errorArray = {};
+                errorArray["CaptchaText"] = data.captchaError;
+                $('#add_comment_form').validate().showErrors(errorArray);
+                CaptchaId.ReloadImage();
                 $('#add_comment_field_captcha').val('');
+                $('.add-comment-submit').children('button[type="submit"]').loadMode();
             }, 200);
         } else {
+            $('.add-comment-submit').children('button[type="submit"]').loadMode();
             $('#add_comment_error').hide();
             $('#add_comment_form').hide();
             $('#add_comment_success').show();
