--- a/Squirrel/Squirrel.Web/Views/Home/Index.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Home/Index.cshtml
@@ -11,6 +11,10 @@
 @if (topTopics != null && topTopics.Count >= 3)
 {
     <div class="col-md-12 hidden-sm hidden-xs">
+        <div class="divider-blank50"></div>
+    </div>
+
+    <div class="col-md-12 hidden-sm hidden-xs">
         <div class="row top-topics">
             @Html.Partial("Index_TopTopics", topTopics)
         </div>
