--- a/Squirrel/Squirrel.Web/Content/themes/vone/functions.less
+++ b/Squirrel/Squirrel.Web/Content/themes/vone/functions.less
@@ -107,3 +107,12 @@
     /* Opera 11.10+ */
     background: -o-linear-gradient(top, @topColor, @bottonColor);
 }
+
+.linearGradientVerticalCenter(@centerColor,@edgeColor) {
+    background: -moz-linear-gradient(top, @edgeColor 0, @centerColor 50%, @edgeColor 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0, @edgeColor), color-stop(50%, @centerColor), color-stop(100%, @edgeColor));
+    background: -webkit-linear-gradient(top, @edgeColor 0, @centerColor 50%, @edgeColor 100%);
+    background: -o-linear-gradient(top, @edgeColor 0, @centerColor 50%, @edgeColor 100%);
+    background: -ms-linear-gradient(top, @edgeColor 0, @centerColor 50%, @edgeColor 100%);
+    background: linear-gradient(to bottom, @edgeColor 0, @centerColor 50%, @edgeColor 100%);
+}
