--- a/Squirrel/Squirrel.Web/Views/Shared/_FloatHeader.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Shared/_FloatHeader.cshtml
@@ -44,10 +44,15 @@
     });
 
     $(window).scroll(function () {
-        if ($(window).scrollTop() > 300) {
+        if ($(window).scrollTop() > 213) {
             $('.overheader').addClass('make-vis');
         } else {
             $('.overheader').removeClass('make-vis');
+        }
+        if ($(window).scrollTop() > 1000) {
+            $('.gototop').addClass('active');
+        } else {
+            $('.gototop').removeClass('active');
         }
     });
 
