--- a/Squirrel/Squirrel.Web/Views/Issue/Item_Related.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Issue/Item_Related.cshtml
@@ -4,7 +4,7 @@
 @model List<Squirrel.Domain.Enititis.Topic>
 
 
-<div class="topic">مطالب مرتبط</div>
+<div class="topic">مطالب دیگر</div>
 <div class="row">
     @foreach (var topic in Model)
     {
