--- a/Squirrel/Squirrel.Web/Views/Resume/Behnam.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Resume/Behnam.cshtml
@@ -2,7 +2,7 @@
 @using Squirrel.Utility.FarsiTools
 @{
     ViewBag.Title = "بهنام ضیغمی";
-    Layout = "~/Views/Shared/_Layout_Resume.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 
     var skills = new List<ResumeSkillViewModel>
     {
