--- a/Squirrel/Squirrel.Web/Views/Shared/_Header_v2.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Shared/_Header_v2.cshtml
@@ -6,6 +6,9 @@
         <div class="siteglyphbox">&#xe600</div>
     </a>
     <a class="name" href="@Url.Action("Index", "Home")">سنجاب</a>
+    <div>
+        <a class="title-name" href="@Url.Action("Index", "Home")">وبلاگ سنجاب</a>
+    </div>
 </div>
 <div class="menuv2">
     <a class="item glyphbox" href="@Url.Action("Index", "Home")">&#xe648</a>
@@ -17,9 +20,9 @@
         </a>
     }
     <a class="item glyphbox hidden-lg hidden-md hidden-sm" onclick="xsMenuToggle()">&#xe636</a>
-    <a class="item glyphbox" href="#">&#xe618</a>
+    <a class="item glyphbox" onclick="searchInMenuToggle()">&#xe618</a>
 </div>
-<div class="menu-bubble-mode">
+<div class="menu-bubble-mode hidden-sm hidden-md hidden-lg">
     @foreach (var cat in CachedAppData.PublishedMainCategories.Items.OrderByDescending(x => x.ChildTopicCount + x.TopicCount))
     {
         var item = cat;
@@ -27,6 +30,20 @@
             @Html.DisplayFor(m => item.Name)
         </a>
     }
+</div>
+
+<div class="search-frommenu">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="col-md-6 col-md-push-3 col-sm-8 col-sm-push-2">
+                <div class="materialtext haspretext">
+                    <div class="pretext glyphbox" onclick="">&#xe686</div>
+                    <div class="title">عبارت جستجو را بنویسید.</div>
+                    @Html.TextBox("searchtextfix", null, new { @class = "textbox" })
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="glyphbox gototop hidden-sm hidden-xs">&#xe682</div>
@@ -38,6 +55,13 @@
                 scrollTop: 0
             }, '500', 'swing', function () { });
         });
+
+        $('.search-frommenu input[type="text"]').on('keypress', function (e) {
+            var text = $('.search-frommenu input[type="text"]').val();
+            if (e.keyCode === 13) {
+                SearchWithKeyword(text);
+            }
+        });
     });
 
     function xsMenuToggle() {
@@ -47,6 +71,14 @@
         } else {
             $(".menu-bubble-mode").slideDown(200);
             $(".menu-bubble-mode").addClass("active");
+        }
+    }
+
+    function searchInMenuToggle() {
+        if ($('.search-frommenu').hasClass("active")) {
+            $('.search-frommenu').removeClass("active");
+        } else {
+            $('.search-frommenu').addClass("active");
         }
     }
 </script>
