--- a/Squirrel/Squirrel.Web/Views/Shared/_Layout.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Shared/_Layout.cshtml
@@ -13,14 +13,21 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Styles.Render("~/Content/vone")
     @RenderSection("scripts", required: false)
-
+    <script type="text/javascript">
+        function SearchWithKeyword(k) {
+            k = k.trim();
+            if (k !== '') {
+                window.location.href = '@Url.Action("Search", "Issues", new { id = "" })' + "/" + k;
+            }
+        }
+    </script>
 </head>
 <body>
     @Html.Partial("_FloatHeader")
     <div class="container">
         @*<div class="header-container" id="header_fix">
-            @Html.Partial("_Header")
-        </div>*@
+                @Html.Partial("_Header")
+            </div>*@
         <div class="header-container_v2 flatbox-shadow">
             @Html.Partial("_Header_v2")
         </div>
@@ -28,11 +35,11 @@
             @Html.Partial("_BubbleMenu")
         </div>
         @*<div class="row">
-            <div class="sitename-con">
-                <div class="name">سنجاب</div>
-                <div class="desc">وبــلاگ شــخـصی</div>
-            </div>
-        </div>*@
+                <div class="sitename-con">
+                    <div class="name">سنجاب</div>
+                    <div class="desc">وبــلاگ شــخـصی</div>
+                </div>
+            </div>*@
         <div class="row">
             @RenderBody()
         </div>
